# tasks

./: Makefile  README.md  pyproject.toml
task1/: task1.py  tests.py
task2/: task2.py  tests.py
